# tetris_cpp

./: CMakeLists.txt  LICENSE  README.md  Tetris.mdj  doxygen
include/model/game/: duel.hpp  gamestate.hpp  matrix.hpp  ongoinggame.hpp  player.hpp  tetriminoGenerator.hpp
include/model/game/state/: blockedoutstate.hpp  fallingstate.hpp  lockeddownstate.hpp  lockedoutstate.hpp  notstartedstate.hpp  stoppedstate.hpp
include/model/game/state/exceptions/: blockedoutexception.hpp  illegalstateexception.hpp  movenotpossibleexception.hpp  notStartedException.h  notstartedexception.hpp  ongoinggame.hpp  rotationnotpossibleexception.hpp  startongoinggameexception.hpp  stoppedgameexception.hpp
include/model/notification/: action.hpp  notification.hpp
include/model/notifier/: action.hpp  notification.hpp
include/model/tetrimino/: direction.hpp  mino.hpp  orientation.hpp  tetrimino.hpp  tetrimino_logic.hpp
include/model/tetrimino/exceptions/: movenotpossibleexception.hpp  rotationnotpossibleexception.hpp
include/model/tetrimino/shape/: ishape.hpp  jshape.hpp  lshape.hpp  oshape.hpp  sshape.hpp  tshape.hpp  zshape.hpp
include/model/tetrimino/type/: itetrimino.hpp  jtetrimino.hpp  ltetrimino.hpp  otetrimino.hpp  stetrimino.hpp  ttetrimino.hpp  ztetrimino.hpp
include/utils/: coordinate.hpp
resources/: resources.qrc
src/client/: TetrisClient.cpp  TetrisClient.hpp  client.cpp  client.hpp  main.cpp  socket_client.cpp  socket_client.hpp  tetris_client.cpp  tetris_client.hpp
src/client/client_socket/: tetris_client.cpp  tetris_client.hpp
src/client/component/: game.cpp  game.hpp  matrix.cpp  matrix.hpp  mino.cpp  mino.hpp  score_board.cpp  score_board.hpp  tetri_holder.cpp  tetri_holder.hpp
src/client/exceptions/: connexion_not_possible_exception.hpp
src/client/scene/: multiplayer_scene.cpp  multiplayer_scene.hpp
src/client/view/: view.cpp  view.hpp
src/client/view/component/: game.cpp  game.hpp  matrix.cpp  matrix.hpp  mino.cpp  mino.hpp  score_board.cpp  score_board.hpp  tetri_holder.cpp  tetri_holder.hpp
src/client/view/scene/: game_scene.cpp  game_scene.hpp  multiplayer_scene.cpp  multiplayer_scene.hpp
src/client/view/window/: game_window.cpp  game_window.hpp
src/client/window/: game_window.cpp  game_window.hpp
src/model/: ishape.cpp  ishape.hpp  itetrimino.hpp  jshape.cpp  jshape.hpp  jtetrimino.hpp  lshape.cpp  lshape.hpp  ltetrimino.hpp  mino.hpp  orientaion.hpp  oshape.cpp  oshape.hpp  otetrimino.hpp  sshape.cpp  sshape.hpp  stetrimino.hpp  tetrimino.cpp  tetrimino.hpp  tshape.cpp  tshape.hpp  ttetrimino.hpp  zshape.cpp  zshape.hpp  ztetrimino.hpp
src/model/game/: duel.cpp  gamestate.hpp  matrix.cpp  matrix.hpp  ongoinggame.cpp  ongoinggame.hpp  player.cpp  player.hpp  states.hpp  tetriminoGenerator.cpp  tetriminoGenerator.hpp
src/model/game/state/: blockedoutstate.cpp  blockedoutstate.hpp  fallingstate.cpp  fallingstate.hpp  lockeddownstate.cpp  lockeddownstate.hpp  lockedoutstate.cpp  lockedoutstate.hpp  notstartedstate.cpp  notstartedstate.hpp  states.hpp  stoppedstate.cpp  stoppedstate.hpp
src/model/game/state/exceptions/: notstartedexception.hpp  stoppedgameexception.hpp
src/model/game/states/: blockedoutstate.cpp  blockedoutstate.hpp  fallingstate.cpp  fallingstate.hpp  lockeddownstate.cpp  lockeddownstate.hpp  lockedoutstate.cpp  lockedoutstate.hpp  notstartedstate.cpp  notstartedstate.hpp  stoppedstate.cpp  stoppedstate.hpp
src/model/game/states/exceptions/: blockedoutexception.hpp  lockedoutexception.hpp  notstartedexception.hpp  startongoinggameexception.hpp
src/model/notification/: action.hpp  notification.cpp  notification.hpp
src/model/notifier/: notification.cpp
src/model/tetrimino/: direction.hpp  mino.hpp  orientation.hpp  tetrimino.cpp  tetrimino.hpp  tetrimino_logic.hpp
src/model/tetrimino/exceptions/: rotationnotpossibleexception.hpp
src/model/tetrimino/shape/: ishape.hpp  jshape.hpp  lshape.hpp  oshape.hpp  sshape.hpp  tshape.hpp  zshape.hpp
src/model/tetrimino/type/: itetrimino.cpp  itetrimino.hpp  jtetrimino.cpp  jtetrimino.hpp  ltetrimino.cpp  ltetrimino.hpp  otetrimino.cpp  otetrimino.hpp  stetrimino.cpp  stetrimino.hpp  ttetrimino.cpp  ttetrimino.hpp  ztetrimino.cpp  ztetrimino.hpp
src/server/: main.cpp  match.cpp  match.hpp  player_socket.hpp  tetris_server.cpp  tetris_server.hpp
src/server/exceptions/: server_start_exception.hpp
src/server/server/: TetrisServer.cpp  TetrisServer.hpp
test/: main_test.cpp
test/model/game/: matrix_test.cpp  player_test.cpp  tetriminoGenerator_test.cpp
test/model/game/state/: blockedoutstate_test.cpp  fallingstate_test.cpp  lockeddownstate_test.cpp  lockedoutstate_test.cpp  notstartedstate_test.cpp  stoppedstate_test.cpp
test/model/tetrimino/: direction_test.cpp  orientation_test.cpp  tetrimino_test.cpp  tetriminologic_test.cpp
test/model/tetrimino/type/: itetrimino_test.cpp  jtetrimino_test.cpp  ltetrimino_test.cpp  otetrimino_test.cpp  stetrimino_test.cpp  ttetrimino_test.cpp  ztetrimino_test.cpp
test/utils/: coordinate_test.cpp
